--- a/addPost.html
+++ b/addPost.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Add post</title>
 </head>
 <body>
-    <h1>addPost page</h1>
-    <h2>Kätryn</h2>
+    <nav>
+        <a href="index.html">HOME</a>       
+        <a class="logo" href="#"><img src="icon.png" width="50" height="50" alt="User icon"></a>
+    </nav>
+    
+    <div class="form-container">
+        <h1>Add a New Post</h1>
+        <form action="index.html" method="POST">
+            <table>
+                <tr>
+                    <td><label for="title">Post body</label></td>
+                    <td><textarea id="content" name="content" rows="5" required placeholder="textarea"></textarea></td>
+                </tr>
+                <tr>
+                    <td><label for="file" class="custom-file-input">Select file</label></td>
+                    <td><input type="file" class="file-input"></td>
+                </tr>
+            </table>
+            <button type="submit">Create post</button>
+        </form>
+    </div>
     
 </body>
 </html>
