--- a/addPost.html
+++ b/addPost.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="index.html">HOME</a>       
-        <a class="logo" href="#"><img src="icon.png" width="50" height="50" alt="User icon"></a>
+        <a class="logo" href="login.html"><img src="icon.png" width="50" height="50" alt="User icon"></a>
     </nav>
     
     <div class="form-container">
@@ -21,8 +21,9 @@
                     <td><textarea id="content" name="content" rows="5" required placeholder="textarea"></textarea></td>
                 </tr>
                 <tr>
-                    <td><label for="file" class="custom-file-input">Select file</label></td>
-                    <td><input type="file" class="file-input"></td>
+                    <td><label for="file">Select file</label></td>
+                    <td><label for="file-upload" class="custom-file-input">Choose File</label></td>
+                    <td><input type="file" id="file-upload"></td>
                 </tr>
             </table>
             <button type="submit">Create post</button>
