image resizing fixed on index.html page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="3"><img src="post-1.png" alt="Image of tartu">
+                        <td colspan="3"><img class="postimg" src="post-1.png" alt="Image of tartu">
                         </td>
                     </tr>
                     <tr>
@@ -94,7 +94,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="3"><img src="cat.png" alt="Picture of cat"></td>
+                        <td colspan="3"><img class="postimg" src="cat.png" alt="Picture of cat"></td>
                     </tr>
                     <tr>
                         <td>
