--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             <table class="login">
                 <tr>
                     <td>
-                        <a href="#">Create an account</a> <br>
+                        <a href="#">Create an account</a>
                         <p>or</p>
                     </td>
                 </tr>
