--- a/addPost.html
+++ b/addPost.html
@@ -19,13 +19,15 @@
         <form action="index.html" method="GET">
             <table>
                 <tr>
-                    <td><label for="title">Post body</label></td>
+                    <td><label for="content">Post body</label></td>
                     <td><textarea id="content" name="content" rows="5" required placeholder="textarea"></textarea></td>
                 </tr>
                 <tr>
-                    <td><label for="file">Select file</label></td>
-                    <td><label for="file-upload" class="custom-file-input">Choose File</label></td>
-                    <td><input type="file" id="file-upload"></td>
+                    <td><label for="file-upload">Select file</label></td>
+                    <td>
+                        <label for="file-upload" class="custom-file-input">Choose File</label>
+                        <input type="file" id="file-upload">
+                    </td>
                 </tr>
             </table>
             <button type="submit">Create post</button>
