Dropdown menu added. Json is read locally

--- a/addPost.html
+++ b/addPost.html
@@ -11,7 +11,13 @@
 <body>
     <nav>
         <a href="index.html">HOME</a>
-        <a class="logo" href="login.html"><img src="icon.png" width="50" height="50" alt="User icon"></a>
+        <img class="logo" id="logo" src="icon.png" width="50" height="50" alt="User icon">
+
+        <div id="dropdownMenu" class="dropdownMenu">
+            <p>John Doe</p>
+            <p>john.doe@ut.ee</p>
+            <p>logout</p>
+        </div>
     </nav>
 
     <div class="form-container">
@@ -35,5 +41,7 @@
     </div>
 
 </body>
+
+<script src="dropDownMenu.js"></script>
 
 </html>
