--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/index.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <nav>
-      <a href="#">Home</a>
-      <p>|</p>
-      <a href="addPost.html">addPost</a>
-      <a class="logo" href="login.html"
-        ><img src="icon.png" width="50" height="50" alt="User icon"
-      /></a>
-    </nav>
-    <main>
-      <div></div>
-      <div id="middle"></div>
-      <div></div>
-    </main>
-    <footer></footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style/index.css" />
+  <title>Document</title>
+</head>
 
-  <script src="script.js"></script>
+<body>
+  <nav>
+    <a href="#">Home</a>
+    <p>|</p>
+    <a href="addPost.html">addPost</a>
+    <p>|</p>
+    <a href="login.html">login</a>
+    <img class="logo" id="logo" src="icon.png" width="50" height="50" alt="User icon" />
+
+    <div id="dropdownMenu" class="dropdownMenu">
+      <p>John Doe</p>
+      <p>john.doe@ut.ee</p>
+      <p>logout</p>
+    </div>
+  </nav>
+  <main>
+    <div></div>
+    <div id="middle"></div>
+    <div></div>
+  </main>
+  <footer></footer>
+</body>
+
+<script src="script.js"></script>
+
 </html>
