--- a/login.html
+++ b/login.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/login.css">
     <title>Login</title>
 </head>
+
 <body>
     <nav>
-        <a href="index.html">HOME</a>       
-        <a class="logo" href="#"><img src="icon.png" width="50" height="50" alt="User icon"></a>
+        <a href="index.html">HOME</a>
+        <img class="logo" id="logo" src="icon.png" width="50" height="50" alt="User icon">
+
+        <div id="dropdownMenu" class="dropdownMenu">
+            <p>John Doe</p>
+            <p>john.doe@ut.ee</p>
+            <p>logout</p>
+        </div>
     </nav>
 
     <div class="form-container">
@@ -29,8 +37,8 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="email" class="login-form" alt="Email" placeholder="Email", required>
-                        <input type="password" class="login-form" alt="Password" placeholder="Password", required>
+                        <input type="email" class="login-form" alt="Email" placeholder="Email" , required>
+                        <input type="password" class="login-form" alt="Password" placeholder="Password" , required>
                     </td>
                 </tr>
                 <tr>
@@ -46,6 +54,9 @@
             </table>
         </form>
     </div>
-    
+
 </body>
+
+<script src="dropDownMenu.js"></script>
+
 </html>
