--- a/addPost.html
+++ b/addPost.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <a href="index.html">HOME</a>
-        <img class="logo" id="logo" src="icon.png" width="50" height="50" alt="User icon">
+        <img class="logo" id="logo" src="images/icon.png" width="50" height="50" alt="User icon">
 
         <div id="dropdownMenu" class="dropdownMenu">
             <p>John Doe</p>
