--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <nav>
     <a href="#">Home</a>
-    <p>|</p>
+    <p class="separator">|</p>
     <a href="addPost.html">addPost</a>
-    <p>|</p>
+    <p class="separator">|</p>
     <a href="login.html">login</a>
-    <img class="logo" id="logo" src="icon.png" width="50" height="50" alt="User icon" />
+    <img class="logo" id="logo" src="images/icon.png" width="50" height="50" alt="User icon" />
 
     <div id="dropdownMenu" class="dropdownMenu">
       <p>John Doe</p>
